<resources>
    <string name="app_name">YNU</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 (확인)</string>
    <string name="name">이름</string>
    <string name="position">사용자구분</string>
    <string name="department">소속</string>
    <string name="phone">연락처</string>
    <string name="email">이메일</string>
    <string name="address">주소</string>

    <string name="hintId">아이디를 입력하세요</string>
    <string name="hintPassword">비밀번호를 입력하세요</string>
    <string name="hintPasswordCheck">비밀번호를 다시 한 번 입력하세요</string>
    <string name="hintName">이름을 입력하세요</string>
    <string name="hintClick">클릭하세요</string>
    <string name="hintPhone">연락처를 입력하세요</string>
    <string name="hintEmail">이메일을 입력하세요</string>
    <string name="hintAddress">주소를 입력하세요</string>


    <string name="btnReturn">뒤로가기</string>
    <string name="btnDelete">삭제</string>
    <string name="btnAdd">추가</string>
    <string name="btnList">목록</string>
    <string name="btnModify">수정</string>
    <string name="btnLogin">로그인</string>
    <string name="btnRegister">회원가입</string>
    <string name="btnManage">ADMIN</string>
    <string name="btnSearchId">아이디 검색</string>
    <string name="btnClose">닫기</string>
    <string name="btnSave">저장</string>



</resources>