<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvSchoolName"
        style="@style/schoolName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="30dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLoginCategoryId"
                style="@style/category"
                android:text="@string/id"/>

            <EditText
                android:id="@+id/edtLoginId"
                style="@style/values"
                android:inputType="text"
                android:hint="@string/hintId" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLoginCategoryPassword"
                style="@style/category"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edtLoginPassword"
                style="@style/values"
                android:hint="@string/hintPassword"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLoginLogin"
            style="@style/btnSub"
            android:background="@color/sub"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/btnLoginRegister"
            style="@style/btnMain"
            android:background="@color/main"
            android:text="@string/btnRegister" />

        <Button
            android:id="@+id/btnLoginManage"
            style="@style/btnSub"
            android:background="@color/sub"
            android:text="@string/btnManage" />
    </LinearLayout>
</LinearLayout>