<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvSchoolName"
        style="@style/schoolName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="30dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDeleteCategoryId"
                style="@style/category"
                android:text="@string/id" />

            <EditText
                android:id="@+id/edtDeleteId"
                style="@style/values"
                android:inputType="text"
                android:hint="@string/hintId" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDeleteReturn"
            style="@style/btnSub"
            android:background="@color/sub"
            android:text="@string/btnReturn" />

        <Button
            android:id="@+id/btnDeleteDelete"
            style="@style/btnMain"
            android:background="@color/main"
            android:text="@string/btnDelete"/>
    </LinearLayout>

</LinearLayout>